--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-player":"^2.10.1",
-    "react-router-dom":"^6.3.0",
+    "react-router-dom":"^6.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
